--- a/smart.css
+++ b/smart.css
@@ -18,21 +18,29 @@ body{
  image{
    width: 100%;
    height: 75px;
+   
 
 
  }
 
  header{
     background-color:rgb(166, 166, 221);
-  width: 100%;
+  width: 99%;
   height: max-content;
   display: flex;
 
  }
+ 
+ .Tab nav
+ {
+  background-color: aqua;
+  max-width: 100%;
+
+  }
  .Tabs ul{
      list-style-type: none;    
-      color: #f2f2f2;
-      text-align: center;
+    
+     align-items: center;
     
       text-decoration: none;
       font-size: 17px;
@@ -48,7 +56,7 @@ body{
         list-style: none;
         padding-top: 20px;
         text-align: center;
-        border-bottom: 1px solid #555;
+ 
     
       
  }
@@ -86,6 +94,13 @@ body{
   .header h1 {
     position: relative;
   }
+  .footer{
+ 
+    background-color:gray;
+    height: 100px;
+    width: 100%;
+    align-items: center;
+  }
 .footer ul{
     display: flex;
     flex-direction: row;
@@ -99,8 +114,16 @@ body{
     list-style: none;
     padding-top: 20px;
     text-align: center;
-    border-bottom: 1px solid #555;
 }
-form{
-    align-content: center;
+.colum2{
+  float: right;
+ 
+}
+.container h1{
+  text-align: center;
+}
+.container p{
+  text-align: center;
+  font-style: italic;
+font-size: 55px;
 }
