--- a/smart.css
+++ b/smart.css
@@ -1,129 +1,174 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    all:revert;
-    text-decoration: none;
-
-    
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  all: repeat;
 }
-body{
-    width: 100%;
-    height: auto;
+body {
+  width: 100%;
+  height: auto;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
+image {
+  width: 100%;
+  height: auto;
+}
 
+header {
+  background-color: rgb(166, 166, 221);
+  width: 100%;
+  height: auto;
+  display: inline-block;
+}
 
+.Tabs ul {
+  list-style-type: none;
 
- image{
-   width: 100%;
-   height: 75px;
-   
+  align-items: center;
 
-
- }
-
- header{
-    background-color:rgb(166, 166, 221);
-  width: 99%;
-  height: max-content;
+  text-decoration: none;
+  font-size: 20px;
   display: flex;
+  flex-direction: row;
+  font-size: 25px;
 
- }
- 
- .Tab nav
- {
-  background-color: aqua;
-  max-width: 100%;
-
-  }
- .Tabs ul{
-     list-style-type: none;    
-    
-     align-items: center;
-    
-      text-decoration: none;
-      font-size: 17px;
-      display: flex;
-      flex-direction: row;
-    
-      float: right;
-     
- }
- .Tabs li{
-
-        padding-left:50px ;
-        list-style: none;
-        padding-top: 20px;
-        text-align: center;
- 
-    
-      
- }
-.Tabs li:hover{
-    background-color:rgb(177, 168, 168);
-
-}
- .footer{
-    background-color:rgb(177, 168, 168);
-
- }
- .container{
-    width: 100%;
-    height: 60vh;
-    display: flex;
-    background-image: url(fruits.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    text-align: justify;
-    color: rgb(8, 8, 8);
-   
- }
- .logo{
-    width:10em ;
-    height:10em;
- }
- .header img {
-    float: left;
-    width: 50px;
-    height: 50px;
-    background: #555;
-  }
-  
-  .header h1 {
-    position: relative;
-  }
-  .footer{
- 
-    background-color:gray;
-    height: 100px;
-    width: 100%;
-    align-items: center;
-  }
-.footer ul{
-    display: flex;
-    flex-direction: row;
-    float: left;
-    height: 1px;
-   
-    
-}
-.footer li{
-    padding-left:50px ;
-    list-style: none;
-    padding-top: 20px;
-    text-align: center;
-}
-.colum2{
   float: right;
- 
 }
-.container h1{
+.Tabs li {
+  padding-left: 40px;
+  list-style: none;
+  padding-top: 20px;
   text-align: center;
+  font-size: 25px;
+  color:black;
 }
-.container p{
+.Tabs li:hover {
+  background-color: rgb(177, 168, 168);
+}
+.container {
+  width: 100%;
+  height: 60vh;
+  display: flex;
+  background-image: url(fruits.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: justify;
+  color: rgb(8, 8, 8);
+}
+
+.header img {
+  float: left;
+    border-radius: 50%;
+  width: 5em;
+  height: 5em;
+}
+
+.header h1 {
+  position: relative;
+}
+.footer {
+  background-color: rgb(31, 226, 63);
+  display: flex;
+   width: 100%;
+  margin-bottom: 0%;
+  margin-left: 0%;
+}
+.footer ul {
+  float: left;
+  display: flex;
+  flex-direction: row;
+}
+.footer li {
+  text-decoration: none;
+  padding-left: 50px;
+  list-style: none;
+  padding-top: 20px;
+  align-items: center;
+  font-size: 27px;
+  color: black;
+}
+.colum2 {
+  float: right;
+  display: flex;
+  padding: 45px;
+  font-size: 3opx;
+}
+.container h1 {
   text-align: center;
-  font-style: italic;
-font-size: 55px;
+  color: rgb(82, 9, 154);
+}
+.container p {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  text-align: center;
+  font-size: 55px;
+  color: rgb(96, 13, 205);
+}
+/* Center website */
+.main {
+  max-width: 1000px;
+  margin: auto;
+}
+
+h1 {
+  font-size: 50px;
+  word-break: break-all;
+}
+
+.row {
+  margin: 10px -16px;
+}
+
+/* Add padding BETWEEN each column */
+.row,
+.row > .column {
+  padding: 8px;
+}
+
+/* Create three equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 33.33%;
+  display: none; /* Hide all elements by default */
+}
+
+/* Clear floats after rows */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Content */
+.content {
+  background-color: white;
+  padding: 10px;
+}
+
+/* The "show" class is added to the filtered elements */
+.show {
+  display: block;
+}
+
+/* Style the buttons */
+.btn {
+  border: none;
+  outline: none;
+  padding: 12px 16px;
+  background-color: white;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #ddd;
+}
+
+.btn.active {
+  background-color: #666;
+  color: white;
 }
